--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   "dependencies": {
   },
   "devDependencies": {
-    "async": "0.2.x",
-    "mocha": "1.17.1",
-    "should": "3.1.x"
+    "mocha": "1.x.x",
+    "should": "3.x.x"
   },
   "licence": "MIT",
   "engines": {
