--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "autoload",
+  "name": "auto-load",
   "description": "Require all files in subfolders",
   "version": "1.0.0",
   "author": "Matthieu Bacconnier <matthieu.bacconnier@papiel.fr>",
