--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "auto-load",
   "description": "Require all files in subfolders",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "Matthieu Bacconnier <matthieu.bacconnier@papiel.fr>",
   "scripts": {
     "test": "NODE_ENV=test mocha -R spec"
@@ -11,8 +11,7 @@
     "type": "git",
     "url": "https://github.com/Neamar/autoload"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "mocha": "1.x.x",
     "should": "3.x.x"
