--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "NODE_ENV=test mocha -R spec"
   },
   "main": "./lib/",
+  "typings": "./lib/index",
   "repository": {
     "type": "git",
     "url": "https://github.com/Neamar/autoload"
